tests/fixtures/invalid/round_dict_none.py
# Cannot call round() with Dict[str, int], None
x = round({"a": 1}, None)
